# HWHacker

./: .gitmodules
board/kicad_project/: attacker.kicad_sch  flash.kicad_sch  fp-lib-table  hw_hacker.kicad_pcb  hw_hacker.kicad_pro  hw_hacker.kicad_sch  leds.kicad_sch  power.kicad_sch  sym-lib-table  target.kicad_sch
board/kicad_project/project_libraries/ME6211C33M5G-N/: ME6211C33M5G-N.kicad_sym  ME6211C33M5G-N.mod
board/kicad_project/project_libraries/RP2040/: QFN40P700X700X90-57N-D.kicad_mod  RP2040.dcm  RP2040.kicad_sym  RP2040.mod
board/kicad_project/project_libraries/YSX321SL/: YSX321SL.kicad_mod  YSX321SL.mod
fw/: .clang-format  CMakeLists.txt
fw/src/: main.cpp
fw/src/rp2040/: hardware.cpp  hardware.h
fw/src/target_interfaces/: clk_controller.cpp  clk_controller.h  pins.h  serial.cpp  serial.h  spi_prog.cpp  spi_prog.h  target_controller.cpp  target_controller.h
fw/target_fw/: .gitignore  Makefile  generate_compile_commands.sh
fw/target_fw/src/: bit_bang_spi.cpp  bit_bang_spi.h  io_pin.h  main.cpp  maths_utils.h  pins.h  serial.cpp  serial.h  string_obfuscator.h
fw_attacker/: .clang-format  CMakeLists.txt
fw_attacker/src/: main.cpp
fw_attacker/src/target_interfaces/: clk_controller.cpp  clk_controller.h  spi_prog.cpp  spi_prog.h
fw_attacker/src/target_interfaces/spi_prog/: spi_prog.cpp
